--- a/CWS_CaseStudy.ipynb
+++ b/CWS_CaseStudy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGB2Vrs52WfPZyNg4tLIQd",
+      "authorship_tag": "ABX9TyOWfoFaT9HqzV4O5uNZ2FeW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -956,44 +956,30 @@
     {
       "cell_type": "code",
       "source": [
-        "arr[:,1]+arr[:,2]"
+        "merge_txt = arr[:,1]+' '+arr[:,2]\n",
+        "data = np.transpose(np.vstack((arr[:,0], merge_txt)))\n",
+        "np.shape(data)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lA6O6BH0zp3h",
-        "outputId": "c226b741-ec30-4c92-9995-c6b6b97162bd"
+        "outputId": "2145e415-0c68-46bc-a268-8a11c1dcfa2f"
       },
-      "execution_count": 21,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['JUST PERFECTI was away for couple of months and I am so happy to be back for my regular cocotte meal, after collecting from the restaurant everything was as great and perfect than eating in. Juicy chicken, fresh side, amazing mash potato.What a great dinner at home again thanks to COCOTTE.',\n",
-              "       \"Quality food, Food travels well, Excellent customer serviceI recently ordered over the phone from Cocotte to collect for a gathering at home. On calling the restaurant for the delivery, the service was polite, well communicated and friendly. The person on the phone had a great knowledge of the menu and gave helpful suggestions for customer favourites. The food was ready to collect swiftly at the time we requested and was well packaged for the journey home. The food itself traveled well which is fantastic, the food remained warm and as tasty as when we've eaten on site. All in all what a fabulous night made perfect by Cocottes tasty food and efficient service.\",\n",
-              "       'Came here because we missedCame here because we missed our table at Farmacy across the road. The waitress accommodated us within 10 minutes and offered suitable vegan food. No lager on tap but not the end of the world. Enjoyed everything. 2 people, 4 dishes, 2 cocktails and 2 beers came to £62 which seemed reasonable for this area in London. Would certainly come back for a snack.',\n",
-              "       ...,\n",
-              "       \"A delicious mealI have now been to this restaurant three times and have never been let down by the food. The meal has always been superb with lots of little extras given to you on the way & everything has been delicious. On the first visit l thought it was a bit pretentious but having gone a second time l thoroughly enjoyed the evening. The room is small & therefore if it is not full you sort of whisper as you don't want to talk too loudly and l wouldn't call it a cosy restaurant even though it is not a big room but if you want a special & delicious meal go there but maybe check the menu before you go as there isn't a massive choice.\",\n",
-              "       'DinnerThis was a great experience and fantastic dinner. Service is perfect, quality food and a long wine list.  I will come again when in town!',\n",
-              "       'Fantastic place for an occasion A fantastic evening from start to finish. We had the tasting menu, all of which was superb and contained many additional courses and canapés. Standout dishes for both of us included Sweetbreads and langoustine with watermelon.  The wine we chose ourselves and was delicious. The service was unobtrusive yet involved and the restaurant is comfortable and private.  We were lucky enough to be given a tour of the wine cellar too by the extremely kind sommelier. A lovely end to the evening.'],\n",
-              "      dtype=object)"
+              "(8064, 2)"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 36
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bxCenXVRzp5v"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
