--- a/CWS_CaseStudy.ipynb
+++ b/CWS_CaseStudy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWfoFaT9HqzV4O5uNZ2FeW",
+      "authorship_tag": "ABX9TyM5Y8r8DJsnOkoiDrLGPNTf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 88,
       "metadata": {
         "id": "bfDbLsf0x229"
       },
@@ -39,6 +39,14 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from dateutil.parser import parse\n",
+        "import nltk\n",
+        "import string\n",
+        "import re\n",
+        "from nltk.stem import WordNetLemmatizer \n",
+        "from nltk.corpus import stopwords\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from IPython.core.interactiveshell import InteractiveShell\n",
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "pd.options.display.max_rows = 50\n",
@@ -957,27 +965,191 @@
       "cell_type": "code",
       "source": [
         "merge_txt = arr[:,1]+' '+arr[:,2]\n",
-        "data = np.transpose(np.vstack((arr[:,0], merge_txt)))\n",
-        "np.shape(data)"
+        "merge_txt[0]"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 71
         },
         "id": "lA6O6BH0zp3h",
-        "outputId": "2145e415-0c68-46bc-a268-8a11c1dcfa2f"
+        "outputId": "e4b7d17f-d2dd-43a8-8888-1ae6408b6374"
       },
-      "execution_count": 36,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(8064, 2)"
-            ]
+              "'JUST PERFECT I was away for couple of months and I am so happy to be back for my regular cocotte meal, after collecting from the restaurant everything was as great and perfect than eating in. Juicy chicken, fresh side, amazing mash potato.What a great dinner at home again thanks to COCOTTE.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pre-process text"
+      ],
+      "metadata": {
+        "id": "cC2SJ_Y4-MDw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def process(sentence):\n",
+        "    # Remove special charaters\n",
+        "    output = re.findall('[\\w]+', sentence.lower())\n",
+        "    # Remove digits\n",
+        "    output = [re.sub(r'\\d+', '', item) for item in output]\n",
+        "    # Remove urls\n",
+        "    output = [re.sub(r'http\\S+', '', item) for item in output]\n",
+        "    #work level tokenise\n",
+        "    #word_list = nltk.word_tokenize(output)\n",
+        "    # lemmatize\n",
+        "    tokens = [lemmatizer.lemmatize(word=item) for item in output if item not in stop]\n",
+        "    # if using TfidfVectorizer or CountVectorizer, as they expect sentence and not tokens. They tokenise themselves.\n",
+        "    tokens = (' ').join(tokens)\n",
+        "    return tokens"
+      ],
+      "metadata": {
+        "id": "Pb8bzujjzp7z"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Initialise lemmatizer\n",
+        "lemmatizer = WordNetLemmatizer()\n",
+        "# stop words\n",
+        "stop = set(stopwords.words('english') + list(string.punctuation))\n",
+        "stop.add('')\n",
+        "processed_reviews = [process(sent) for sent in data[:,1]]\n",
+        "processed_reviews[0]"
+      ],
+      "metadata": {
+        "id": "I8oRJbRmzp-T"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vector representation"
+      ],
+      "metadata": {
+        "id": "gkxQCgnD-P5-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectorizer = TfidfVectorizer()#CountVectorizer()\n",
+        "X = vectorizer.fit_transform(processed_reviews)\n",
+        "Y = arr[:,0]\n",
+        "print(np.shape(X))\n",
+        "print(np.shape(Y))"
+      ],
+      "metadata": {
+        "id": "ctcPzcT-9-yk",
+        "outputId": "77f27810-435b-46f2-b909-8da183a832c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(8064, 14171)\n",
+            "(8064,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Train-Test split"
+      ],
+      "metadata": {
+        "id": "o-Cltzwl_Wx3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25, random_state=42)\n",
+        "print(np.shape(X_train), np.shape(X_test), np.shape(Y_train), np.shape(Y_test))"
+      ],
+      "metadata": {
+        "id": "uVFCowqx_Ugq",
+        "outputId": "4bee0cd0-ac90-4e8f-990e-d80afaf7e3a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(6048, 14171) (2016, 14171) (6048,) (2016,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest Classifier"
+      ],
+      "metadata": {
+        "id": "q96hq-1X_w6k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rfc = RandomForestClassifier(max_depth=2, random_state=0)\n",
+        "rfc.fit(X_train, Y_train)"
+      ],
+      "metadata": {
+        "id": "7RsUf1WH_vi4",
+        "outputId": "83e8af84-fd93-4e9e-cc63-b08fe4510356",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 593
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-91-7ec681434e64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrfc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrfc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/ensemble/_forest.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    365\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_outputs_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    366\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 367\u001b[0;31m         \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_class_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_y_class_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    368\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    369\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dtype\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mDOUBLE\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontiguous\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/ensemble/_forest.py\u001b[0m in \u001b[0;36m_validate_y_class_weight\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m    732\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_validate_y_class_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/utils/multiclass.py\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m    195\u001b[0m         \u001b[0;34m\"multilabel-sequences\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m     ]:\n\u001b[0;32m--> 197\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Unknown label type: %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Unknown label type: 'unknown'"
+          ]
         }
       ]
     },
@@ -985,7 +1157,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Pb8bzujjzp7z"
+        "id": "b0ZDhga-_vmZ"
       },
       "execution_count": null,
       "outputs": []
@@ -994,28 +1166,83 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "I8oRJbRmzp-T"
+        "id": "wEsJVAyn_vqy"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#data = np.transpose(np.vstack((arr[:,0], processed_reviews)))\n",
+        "#np.shape(data)\n",
+        "#data[0]"
+      ],
       "metadata": {
-        "id": "LHcy9Y9KzqAv"
+        "id": "DySiszKr9iw1",
+        "outputId": "43b09347-a977-453b-e23a-f162c3a26593",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8065,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#nltk.download('punkt')\n",
+        "#nltk.download('wordnet')\n",
+        "nltk.download('omw-1.4')"
+      ],
       "metadata": {
-        "id": "R8Y1XSjNzqDd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LHcy9Y9KzqAv",
+        "outputId": "ce5175e4-5f65-4238-ffda-ca7f22aa30fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
     }
   ]
 }
